# Client-Server-File-Sharing-via-Sockets

./: .gitignore  ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  BUILD.md  CLIENT_README.md  CMakeLists.txt  DESIGN.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  PACKAGE_OVERVIEW.md  QUICKSTART.md  README.md  SOCKET_WORKFLOW.md  SUMMARY.md  TAILSCALE_GUIDE.md  TEST_METRICS_GUIDE.md  TEST_USAGE.md  build_gui.sh  demo.sh  quick_start.sh  test_get.sh  test_list.sh  test_metrics.sh  test_put.sh  test_shutdown.sh
app/: CMakeLists.txt  GUI_PROJECT_OVERVIEW.md  README.md  USAGE_GUIDE.md  run_gui.sh
app/client/: ClientWindow.cpp  ClientWindow.h  main.cpp
app/common/: NetworkUtils.h
app/server/: ServerThread_impl.cpp  ServerWindow.cpp  ServerWindow.h  main.cpp
docs/: ARCHITECTURE.md  ARCHITECTURE_DIAGRAMS.md  DESIGN.md  METRICS_DOCUMENTATION.md  Pattern Design.docx
include/: client.h  server.h
include/core/Client/: client_metrics.h  client_protocol.h  client_socket.h
include/core/Server/: client_session.h  server_metrics.h  server_protocol.h  server_socket.h
shared/: config.txt  test_file.txt  upload_test.txt  welcome.txt
src/: client.cpp  server.cpp
src/core/Client/: client_metrics.cpp  client_protocol.cpp  client_socket.cpp
src/core/Server/: client_session.cpp  server_metrics.cpp  server_protocol.cpp  server_socket.cpp
tests/: bulk_upload_client.cpp  client_test.cpp  concurrent_client_test.cpp  file_size_test.cpp  server_metrics.cpp  server_test.cpp  simple_client.cpp  simple_server.cpp
